# rust-screen-recorder

./: .gitignore  Cargo.toml
src/: main.rs
src/linux/: main.rs
src/macos/: encoder.rs  main.rs
